plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'CAP-FIT'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'com.mysql:mysql-connector-j:8.2.0'

	implementation 'org.springframework.boot:spring-boot-starter-validation:3.5.3'

	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'

	runtimeOnly 'com.mysql:mysql-connector-j'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
	testImplementation 'com.h2database:h2:2.3.232'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
    jvmArgs '--add-opens', 'java.base/jdk.internal.misc=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/sun.security.x509=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.net=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.nio=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.security=ALL-UNNAMED'
    jvmArgs '--add-opens', 'java.base/java.math=ALL-UNNAMED'
    jvmArgs '-javaagent:' + configurations.testRuntimeClasspath.find { it.name.contains('byte-buddy-agent') }
}
